--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
             background-position: 0% 50%;
         }
     }
-
+/*  this is a nav bar */
     nav {
         height: 50px;
         margin-top: 35px;
@@ -29,6 +29,7 @@
         border-radius: 30px;
     }
 
+/* inside the nav bar there is an unorder list */
     nav ul {
         display: flex;
         justify-content: space-evenly;
@@ -36,10 +37,11 @@
         padding-top: 5px;
     }
 
+    /* when the cursor on nav bar then, nav bar will blur  */
     nav:hover a {
         filter: blur(2.5px);
     }
-
+/* when the cursor on the nav bar element the element will not blur.. */
     nav a:hover {
         filter: blur(0);
     }
@@ -72,7 +74,7 @@
         padding: 70px;
 
     }
-
+/* input field where the user enter the task */
     #input {
         margin-right: 35px;
         padding: 10px 15px;
@@ -80,28 +82,23 @@
         border: 2px solid #fff;
         border-radius: 8px;
         outline: none;
-        transition: all 0.3s ease;
-        animation: scaleUp 2s infinite alternate ease-in-out;
+        transition: all 0.5s ease-in-out;
+
+
     }
 
-    @keyframes scaleUp {
-        from {
-            transform: scale(1);
-        }
-
-        to {
-            transform: scale(1.2);
-        }
+    #input:hover {
+        transform: scale(1.06);
     }
 
-
+/* the task list where the task is added */
     #task_list {
         color: antiquewhite;
-        font-size: 45px;
+        font-size: 30px;
         margin-left: 20px;
     }
 
-
+/* this is first button where the task is added to the task list */
     #btn {
         margin-right: 15px;
         border: none;
@@ -110,6 +107,7 @@
         transition: all 1s ease-in-out;
         outline: none;
         background-color: #59bb3bda;
+        cursor: pointer;
     }
 
     #btn:hover {
@@ -121,6 +119,7 @@
 
     }
 
+    /* the button 2 is for the removing the all  task   from the task list*/
     #btn2 {
         border: none;
         padding: 13px 15px;
@@ -128,6 +127,7 @@
         transition: all 1s ease-in-out;
         outline: none;
         background-color: rgba(255, 0, 0, 0.836);
+        cursor: pointer;
     }
 
     #btn2:hover {
@@ -138,15 +138,20 @@
         border: 1px solid black;
     }
 
-
-    .btn3{
+/* this button 3 for the deleting particular  task from the  task list */
+    .btn3 {
         border: none;
         padding: 7px;
         border-radius: 10px;
-        background-color:  rgba(255, 0, 0, 0.836);
+        background-color: rgba(255, 0, 0, 0.836);
         margin-left: 15px;
         transition: all 1s ease-in-out;
+        cursor: pointer;
     }
-    .btn3:hover{
+
+    .btn3:hover {
         transform: scale(1.09);
     }
+
+
+    
